--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -4,5 +4,7 @@
 @import './config';
 @import './layouts';
 @import './global';
+@import './components';
 @import '/home';
+@import './profiles';
 @import './cards'
