--- a/src/assets/scss/_cards.scss
+++ b/src/assets/scss/_cards.scss
@@ -1,16 +1,126 @@
 .search-card {
-    display: flex;
-    box-shadow: $border-radius;
-    border-radius: $border-radius;
-    width: 37rem;
-    padding: 1.5rem;
-    background: $white;
-    border: 1px solid rgba(6, 5, 32, 0.1);
+  display: flex;
+  box-shadow: $border-radius;
+  border-radius: $border-radius;
+  width: 37rem;
+  padding: 1.5rem;
+  background: $white;
+  border: 1px solid rgba(6, 5, 32, 0.1);
 
-    .details{
-      margin: 0 0.8rem;
-    } 
-    @include mediaMd {
-        width: 100%;
+  .details {
+    margin: 0 0.8rem;
+  }
+
+  @include mediaMd {
+    width: 100%;
+  }
+}
+
+
+.profile {
+  background: $white;
+  border: 1px solid rgba(6, 5, 32, 0.1);
+  box-shadow: $box-shadow;
+  border-radius: 8px;
+
+  hr {
+    opacity: 0.1;
+    border: 1px solid $text-color;
+  }
+
+}
+
+.profile-card {
+  padding: 1.5rem;
+
+  @include mediaLg {
+    display: flex;
+
+    &>* {
+      margin: 0 0.4rem;
     }
+  }
+
+  &-button {
+    order: 3;
+
+    button {
+      // padding: 0;
+      width: 100%;
+    }
+
+    img {
+      border: 1px solid rgba(6, 5, 32, 0.2);
+      box-sizing: border-box;
+      border-radius: 8px;
+      padding: 0.6rem;
+    }
+
+    @include mediaMd {
+
+      button {
+        width: 100%;
+      }
+    }
+  }
+
+  &-img {
+
+    @include mediaLg {
+      img {
+        height: 5.5rem;
+        width: 5.5rem;
+      }
+    }
+  }
+
+
+  &-details {
+    h4 {
+      font-weight: 600;
+      font-size: 1.25rem;
+      line-height: 1.6rem;
+      color: $text-color;
+    }
+
+    p {
+      font-weight: 300;
+      font-size: 0.88rem;
+      color: $text-color;
+      margin: 1.5rem 0 0 0;
+
+      span {
+        font-size: 0.75rem;
+        line-height: 150%;
+        padding: 0.5rem 0 0 0;
+        text-transform: uppercase;
+        color: rgba(6, 5, 32, 0.51);
+      }
+    }
+  }
+}
+
+
+.message-card {
+  @include centerItem(space-between);
+  border: $border;
+  margin: 1.5rem;
+  padding: 0.5rem 1rem;
+  border-radius: $border-radius;
+
+  textarea {
+    border: none;
+    // padding: 0.3rem 0.7rem;
+    font-size: 0.8rem;
+    line-height: 150%;
+    letter-spacing: -0.03em;
+    color: $text-color;
+    opacity: 0.4;
+    outline: none;
+  }
+}
+
+.not-found {
+  @include centerWithDirection(column);
+
 }
