--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -2,6 +2,10 @@
     display: grid;
     grid-template-columns: 1fr;
 
+    @include mediaXl {
+        grid-template-columns: 2fr 2fr;
+    }
+
 }
 
 .content {
@@ -9,12 +13,22 @@
         font-weight: bold;
         font-size: 2rem;
         color: $text-color;
+
+        @include mediaXl {
+            font-size: 4.5rem;
+            font-weight: 700;
+        }
     }
 
     p {
         font-size: 0.9rem;
         line-height: 150%;
         letter-spacing: -0.03em;
+
+        @include mediaXl {
+            font-size: 1.1rem;
+            font-weight: 300;
+        }
     }
 }
 
@@ -22,5 +36,10 @@
     img {
         height: 20rem;
         width: 20rem;
+
+        @include mediaXl {
+            height: 87%;
+            width: 87%;
+        }
     }
 }
