--- a/src/assets/scss/_layouts.scss
+++ b/src/assets/scss/_layouts.scss
@@ -1,18 +1,20 @@
 header {
     @include center-item;
     .login-section {
-        @include center-item
+        @include center-item;
+        & > * {
+            margin: 0 0.3rem;
+        }
     }
 }
 
 
 footer {
     font-size: 0.875rem;
-    position: absolute;
-    bottom: 0;
+    // position: absolute;
+    // bottom: 0;
     width: 92%;
-    margin: auto;
-    height: 60px;
+    margin: 2rem  auto 0 auto;
 
     hr {
         opacity: 0.1;
