--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -3,4 +3,5 @@ $primary:#5761D7;
 $white:#ffff;
 $max-width: 1280px;
 $box-shadow: 0px 8px 32px rgba(6, 5, 32, 0.06);
-$border-radius: 12px;
+$border-radius: 8px;
+$border: 1px solid rgba(6, 5, 32, 0.2);
