--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -9,8 +9,6 @@
     border-radius: $border-radius;
     color: $white;
 
-
-
     & > * {
         margin: 0 0.3rem;
     }
@@ -72,6 +70,12 @@
         font-weight: 400;
         color: $text-color;
         font-size: 1rem;
+        width: 100%;
+    }
+
+    span {
+        color: red;
+        display: block;
     }
 }
 
