--- a/src/assets/scss/_layouts.scss
+++ b/src/assets/scss/_layouts.scss
@@ -11,8 +11,8 @@ header {
 
 footer {
     font-size: 0.875rem;
-    // position: absolute;
-    // bottom: 0;
+    position: absolute;
+    bottom: 0;
     width: 92%;
     margin: 2rem  auto 0 auto;
 
