--- a/src/assets/scss/_config.scss
+++ b/src/assets/scss/_config.scss
@@ -1,18 +1,27 @@
 .container {
-    position: relative;
     padding: 0 1rem;
     margin: 1rem 2rem;
+    display: flex;
+    flex-direction: column ;
 
+    &:nth-child(2){
+        flex: 1;
+    }
 
     @include mediaMd {
         margin: 1rem 0rem;
     }
-
 }
 
 
 .text-danger{
  color: rgb(199, 31, 31);
+}
+
+
+a {
+    text-decoration: none;
+    color: inherit;
 }
 
 
