--- a/src/assets/scss/_cards.scss
+++ b/src/assets/scss/_cards.scss
@@ -56,7 +56,7 @@
       width: 100%;
     }
 
-    img {
+    .qr-img {
       border: 1px solid rgba(6, 5, 32, 0.2);
       box-sizing: border-box;
       border-radius: 8px;
