--- a/src/assets/scss/_layouts.scss
+++ b/src/assets/scss/_layouts.scss
@@ -5,6 +5,10 @@ header {
         & > * {
             margin: 0 0.3rem;
         }
+        border: none;
+        outline: hidden;
+        background: $white;
+
     }
 }
 
