fix: issues fixed - updated avatar on search - QR code - Added contact button - Login issues - History payload
resolves #5 #6 #7 #8 #9 #10

--- a/src/assets/scss/_cards.scss
+++ b/src/assets/scss/_cards.scss
@@ -138,7 +138,8 @@
       }
 
       img {
-        margin:0 0 -0.3rem 0.4rem
+        margin:0 0 -0.3rem 0.4rem;
+        cursor:pointer
       }
     }
   }
