--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -1,15 +1,21 @@
 .button {
-    // @include centerWithDirection(row);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include centerItem(center);
     padding: 0.75rem 1.25rem 0.75rem 1.5rem;
     background: $primary;
     border: none;
     border-radius: $border-radius;
     color: $white;
+    cursor: pointer;
 
-    & > * {
+    &:hover {
+        transform: translateY(-2px);
+    }
+
+    &:active {
+        transform: translateY(2px);
+    }
+
+    &>* {
         margin: 0 0.3rem;
     }
 
@@ -22,6 +28,11 @@
         color: $text-color;
         border: 1px solid rgba(6, 5, 32, 0.2);
         border-radius: $border-radius;
+        transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+
+        &:hover {
+            box-shadow: 0 0 40px 40px rgb(228, 228, 228) inset;
+        }
 
     }
 }
@@ -63,7 +74,7 @@
     img {
         margin-right: 0.4rem;
     }
- 
+
     input {
         border: none;
         outline: none;
@@ -81,5 +92,80 @@
 .search-btn {
     @include mediaLg {
         display: none;
+    }
+}
+
+
+
+
+//user menu widget
+
+.user-menu-widget {
+    @include centerItem(center);
+
+    span {
+        font-weight: 600;
+    }
+}
+
+
+.m-dropdown {
+    position: relative;
+
+    &-top {
+        background: #3333;
+        height: 2.5rem;
+        width: 2.5rem;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+
+        img {
+            border-radius: 50%;
+            height: 2.5rem;
+            width: 2.5rem;
+
+        }
+
+        &.show {
+            img {
+                border: 2px $primary solid;
+            }
+
+        }
+    }
+
+    &-logout {
+        position: absolute;
+        top: 3rem;
+        text-align: center;
+        right: -2rem;
+        width: 10rem;
+        background: #ffffff;
+        border-radius: 4px;
+        box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.04);
+
+        button {
+            @include centerItem(center);
+            padding: 1rem 1rem;
+            outline: none;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            background: transparent;
+            color: #000;
+
+            &>* {
+                margin: 0 0.5rem;
+            }
+
+
+        }
+
+        &:hover {
+            background: rgba(0, 0, 0, 0.04);
+        }
     }
 }
