--- a/src/assets/scss/_cards.scss
+++ b/src/assets/scss/_cards.scss
@@ -9,6 +9,10 @@
 
   .details {
     margin: 0 0.8rem;
+
+    p {
+      word-break: break-all;
+    }
   }
 
   img {
@@ -121,8 +125,8 @@
         display: none;
       }
     }
-
     p {
+      word-break: break-all;
       font-weight: 300;
       font-size: 0.88rem;
       color: $text-color;
@@ -138,8 +142,8 @@
       }
 
       img {
-        margin:0 0 -0.3rem 0.4rem;
-        cursor:pointer
+        margin: 0 0 -0.3rem 0.4rem;
+        cursor: pointer
       }
     }
   }
