--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -1,10 +1,5 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 
 body {
-    font-family: 'Avenir', sans-serif;
+    font-family: "Sora", sans-serif;
+    height: 100vh;
 }
