--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -1,8 +1,12 @@
 @font-face {
-    font-family: 'Sora';
+    font-family: '';
     src:
-        url('~@/assets/fonts/sora/Sora-Regular.ttf') format('truetype'), ;
-    font-weight: normal;
-    font-style: normal;
+        url('~@/assets/fonts/static/Sora-Bold.ttf') format('truetype'),
+        url('~@/assets/fonts/static/Sora-ExtraBold.ttf') format('truetype'),
+        url('~@/assets/fonts/static/Sora-ExtraLight.ttf') format('truetype'),
+        url('~@/assets/fonts/static/Sora-Light.ttf') format('truetype'),
+        url('~@/assets/fonts/static/Sora-Medium.ttf') format('truetype'),
+        url('~@/assets/fonts/static/Sora-Regular.ttf') format('truetype'),
+        url('~@/assets/fonts/static/Sora-SemiBold.ttf') format('truetype'),
+        url('~@/assets/fonts/static/Sora-Thin.ttf') format('truetype'), ;
 }
-
