--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -16,7 +16,7 @@
 
         @include mediaXl {
             font-size: 4.5rem;
-            font-weight: 700;
+            // font-weight: 700;
         }
     }
 
@@ -26,8 +26,8 @@
         letter-spacing: -0.03em;
 
         @include mediaXl {
-            font-size: 1.1rem;
-            font-weight: 300;
+            // font-size: 1.1rem;
+            // font-weight: 300;
         }
     }
 }
@@ -41,5 +41,17 @@
             height: 87%;
             width: 87%;
         }
+    }
+}
+
+
+
+.credential {
+    h3 {
+        font-style: normal;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 30px;
+        color: #000000;
     }
 }
