node-sass, sass-loader upgraded. Fixed path in main.scss

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -5,6 +5,6 @@
 @import './layouts';
 @import './global';
 @import './components';
-@import '/home';
+@import './home';
 @import './profiles';
 @import './cards'
