feat:added credential screen #71

--- a/src/assets/scss/_cards.scss
+++ b/src/assets/scss/_cards.scss
@@ -220,9 +220,7 @@
     display: flex;
 
     @include mediaMd {
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+      display: block;
     }
 
     &-section {
