--- a/src/assets/scss/_layouts.scss
+++ b/src/assets/scss/_layouts.scss
@@ -16,8 +16,8 @@ header {
 
 footer {
     font-size: 0.875rem;
-    position: absolute;
-    bottom: -20rem;
+    // position: absolute;
+    // bottom: -20rem;
     height: 70px;
     width: 92%;
 
