--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -90,8 +90,9 @@
 
 
 
-.loading {
+.credential-loader {
     margin: auto;
-    text-align:center ;
-    margin: 5 0 0 0;
+    min-height: 70vh;
+    text-align: center;
+    margin: 5rem 0 0 0;
 }
