--- a/src/assets/scss/_layouts.scss
+++ b/src/assets/scss/_layouts.scss
@@ -1,10 +1,13 @@
 header {
     @include center-item;
+
     .login-section {
         @include center-item;
-        & > * {
+
+        &>* {
             margin: 0 0.3rem;
         }
+
         border: none;
         outline: hidden;
         background: $white;
@@ -16,9 +19,8 @@ header {
 
 footer {
     font-size: 0.875rem;
-    // position: absolute;
-    // bottom: -20rem;
-    height: 70px;
+    bottom: 0;
+    margin: 0.4rem auto;
     width: 92%;
 
     hr {
