--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -5,3 +5,6 @@ $max-width: 1280px;
 $box-shadow: 0px 8px 32px rgba(6, 5, 32, 0.06);
 $border-radius: 8px;
 $border: 1px solid rgba(6, 5, 32, 0.2);
+$warning:#FF8A22;
+$success:#37D5C7;
+$invalid:#F93C35;
