--- a/src/assets/scss/_config.scss
+++ b/src/assets/scss/_config.scss
@@ -1,5 +1,6 @@
 .container {
-    padding: 0 1rem;
+    position: relative;
+    min-height: 90vh;
     margin: 1rem 2rem;
 
     @include mediaMd {
@@ -7,9 +8,13 @@
     }
 }
 
+.content-wrap {
+    padding-bottom: 2.5rem;
+}
 
-.text-danger{
- color: rgb(199, 31, 31);
+
+.text-danger {
+    color: rgb(199, 31, 31);
 }
 
 
@@ -17,7 +22,6 @@ a {
     text-decoration: none;
     color: inherit;
 }
-
 
 // Margin & Padding
 $spaceamounts: (1, 2, 3, 4, 5);
@@ -89,5 +93,5 @@ $spaceamounts: (1, 2, 3, 4, 5);
 
 
 .m-auto {
-    margin: auto ;
+    margin: auto;
 }
