--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -37,9 +37,7 @@
     }
 }
 
-
 // Search input field
-
 .search-input {
     display: flex;
     justify-content: space-between;
@@ -89,10 +87,334 @@
 }
 
 
-
+//credential components
 .credential-loader {
     margin: auto;
     min-height: 70vh;
     text-align: center;
     margin: 5rem 0 0 0;
+}
+
+// skills cards
+.skills {
+    padding: 1.5rem 1.5rem 1.2rem;
+    width: 17.5rem;
+    height: 17.5rem;
+    border: 1px solid $border-color;
+    box-shadow: $card-box-shadow, inset 0px 6px 0px $success;
+    border-radius: 0.25rem 0.25rem 0.75rem 0.75rem;
+
+    &-icon {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+
+    &-title {
+        margin: 1.6rem 0 5rem 0;
+
+        h4 {
+            font-weight: 700;
+            font-size: 1.25rem;
+            line-height: 150%;
+            color: #060520;
+
+        }
+    }
+
+    &-bottom-bar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
+// reward-dashboard
+.rewards {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 1.5rem;
+    width: 37rem;
+    height: 9.5rem;
+    background: $primary;
+    color: $white;
+    background: #060520;
+    border: 1px solid $border-color;
+
+    box-shadow: $card-box-shadow;
+    border-radius: 12px;
+
+    &-default {
+        background: $primary;
+    }
+
+    &-dark {
+        background: #060520;
+    }
+
+    &-light {
+        background: $success;
+    }
+
+
+    &-icon {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 6.5rem;
+        height: 6.5rem;
+        border: 12px solid rgba(248, 248, 248, 0.15);
+        border-radius: 50%;
+    }
+
+    &-text {
+        margin: 0 1.5rem;
+        color: $white;
+
+        span {
+            &:nth-child(1) {
+                font-weight: 700;
+                font-size: 2rem;
+            }
+
+            &:nth-child(2) {
+                font-weight: 400;
+                font-size: 1rem;
+            }
+        }
+
+        p {
+            font-weight: 400;
+            font-size: 1rem;
+            line-height: 1.1rem;
+        }
+    }
+}
+
+
+//chip-card
+
+.chip {
+    font-weight: 600;
+    font-size: 0.75rem;
+
+    &-primary {
+        padding: 0.5rem;
+        background: #F5F4FF;
+        border-radius: $border-radius-chip;
+        color: $primary;
+    }
+
+    &-outlined {
+        padding: 0.5rem;
+        border: 1px solid #CCCCCC;
+        border-radius: $border-radius-chip;
+    }
+
+    &-secondary {
+        padding: 0.5rem;
+        background: #F2F2F2;
+        border-radius: $border-radius-chip;
+    }
+}
+
+
+//content title
+.content-title {
+    font-weight: 700;
+    font-size: 1.5rem;
+    line-height: 1.8rem;
+    color: $black;
+    margin: 1.5rem 0;
+    text-transform: capitalize;
+
+    &-center {
+        text-align: center;
+    }
+}
+
+
+
+// Modal Component
+
+
+.modal {
+    max-width: 40rem;
+    margin: 0 auto;
+
+    &-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
+// Skills card account setup
+.skillcard {
+    &-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &-content {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+
+        div {
+            p {
+                font-weight: 500;
+                font-size: 0.75rem;
+                line-height: 1rem;
+                display: flex;
+                align-items: center;
+                color: #404040;
+                margin: 1.5rem 0;
+            }
+        }
+    }
+
+}
+
+.skillsdescription {
+    div {
+        p {
+            font-weight: 400;
+            font-size: 1rem;
+            line-height: 26px;
+            display: flex;
+            align-items: center;
+            color: #404040;
+            margin: 3rem 0;
+        }
+
+        img {
+            margin: 0.5rem 0
+        }
+    }
+}
+
+
+//Learn Card
+
+.learn {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 24rem;
+    background: $white;
+    border: 1px solid #EDEDED;
+    box-sizing: border-box;
+    box-shadow: $card-box-shadow;
+    border-radius: $border-radius;
+
+    hr {
+        border: 1px solid #404040;
+    }
+
+    &-img {
+        img {
+            width: 100%;
+        }
+    }
+
+    p {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 160%;
+        color: #404040;
+        padding: 0 1.5rem;
+        margin: 0.625rem 0;
+    }
+
+    &-title {
+        padding: 0 1.5rem;
+        line-height: 150%;
+        margin: 0.625rem 0;
+
+        h4 {
+            font-weight: 700;
+            font-size: 1.25rem;
+            color: #060520;
+            margin: 0.625rem 0;
+        }
+
+        &-icons {
+            display: flex;
+            font-weight: 400;
+            font-size: 14px;
+
+            div {
+                display: flex;
+                justify-content: space-between;
+
+                &>* {
+                    margin: 0.4rem
+                }
+            }
+        }
+    }
+
+    &-chip {
+        padding: 0 1.5rem;
+        margin: 0.625rem 0;
+    }
+
+    &-button {
+        padding: 0 1.5rem;
+        display: flex;
+        justify-content: center;
+        margin: 0.625rem 0;
+        width: 100%;
+    }
+}
+
+
+// Faqs
+.faqs {
+    background: $white;
+    border: 0.5px solid rgba(6, 5, 32, 0.2);
+    border-radius: $border-radius;
+    width: 50rem;
+    margin: auto;
+
+
+    &-header {
+        display: flex;
+        justify-content: space-between;
+        background: $white;
+        box-shadow: 0px 1px 0px rgba(6, 5, 32, 0.2);
+        border-radius: 8px 8px 0px 0px;
+        padding: 1rem 1.5rem;
+
+        h5 {
+            font-weight: 600;
+            font-size: 16px;
+            line-height: 150%;
+            color: #060520;
+        }
+    }
+
+    &-content {
+        p {
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 160%;
+            color: #404040;
+            padding: 1.5rem;
+        }
+    }
+}
+
+
+//test 
+
+.reward-dashboard{
+    display: flex;
+    &> *{
+        margin: 0 1rem   ;
+    }
 }
