--- a/src/assets/scss/_config.scss
+++ b/src/assets/scss/_config.scss
@@ -1,20 +1,22 @@
 .container {
     position: relative;
     min-height: 90vh;
-    margin: 1rem 2rem;
+    margin: 1rem 7rem;
 
     @include mediaMd {
-        margin: 1rem 0rem;
+        margin: 1rem 2rem;
     }
 }
 
-.content-wrap {
-    padding-bottom: 2.5rem;
+.text-danger {
+    color: rgb(199, 31, 31);
 }
 
 
-.text-danger {
-    color: rgb(199, 31, 31);
+.border-line {
+    border: 0.2px solid #f1f1f1;
+    width: 100%;
+    margin: 0.4rem 0;
 }
 
 
