--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -2,12 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
-
 
 
 body {
     font-family: "Sora", sans-serif;
+    font-style: normal;
 }
 
 // Overrides @verida/verifiable-credential-view packages
