--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,5 +1,5 @@
 $text-color:rgb(6, 5, 32);
-$primary:#5761D7;
+$primary:#423BCE;
 $white:#ffff;
 $max-width: 1280px;
 $box-shadow: 0px 8px 32px rgba(6, 5, 32, 0.06);
@@ -8,3 +8,7 @@ $border: 1px solid rgba(6, 5, 32, 0.2);
 $warning:#FF8A22;
 $success:#37D5C7;
 $invalid:#F93C35;
+$black:#000000;
+$border-color:#EDEDED;
+$border-radius-chip:6.25rem;
+$card-box-shadow:15px 2px 45px rgba(0, 0, 0, 0.05)
