finish up UI screen for desktop view

--- a/src/assets/scss/_layouts.scss
+++ b/src/assets/scss/_layouts.scss
@@ -1,7 +1,12 @@
+.header-wrapper {
+ background-color: $white
+}
+
 header {
     @include center-item;
     margin-top: 1rem;
     padding: 1rem 0;
+    margin: 1.25rem 7rem;
 
     .login-section {
         @include center-item;
@@ -121,11 +126,14 @@ footer {
 .layout {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 
     @include mediaXl {
+        display: flex;
         flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
     }
 
 }
@@ -152,17 +160,31 @@ footer {
 
     &-button {
         display: flex;
+        align-items: center;
+        // justify-content:center;
+
+        button {
+            margin: 1.5rem 2rem 0 0;
+        }
+
+        @include mediaXl {}
+
     }
 }
 
 .landing-image {
+    margin: auto;
+
     img {
-        height: 20rem;
-        width: 20rem;
+        height: 90%;
+        width: 90%;
 
         @include mediaXl {
-            height: 87%;
-            width: 87%;
+            img {
+                height: 20rem;
+                width: 20rem;
+            }
+
         }
     }
 }
