--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -86,7 +86,6 @@
     }
 }
 
-
 //credential components
 .credential-loader {
     margin: auto;
@@ -96,13 +95,40 @@
 }
 
 // skills cards
+
+
+.skills-bg {
+    padding: 40px 112px 48px;
+    background: #FAFAFA;
+}
+
+.skills-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    @include mediaMd {
+        display: block;
+    }
+}
+
 .skills {
+    cursor: pointer;
     padding: 1.5rem 1.5rem 1.2rem;
     width: 17.5rem;
     height: 17.5rem;
+    margin: 0 2rem 0 0;
     border: 1px solid $border-color;
     box-shadow: $card-box-shadow, inset 0px 6px 0px $success;
     border-radius: 0.25rem 0.25rem 0.75rem 0.75rem;
+
+    &:hover {
+        box-shadow: 15px 35px 64px rgba(0, 0, 0, 0.15), inset 0px 6px 0px #CCCCCC;
+    }
+
+    @include mediaMd {
+        margin: 1rem auto;
+    }
 
     &-icon {
         display: flex;
@@ -131,16 +157,36 @@
 }
 
 // reward-dashboard
+
+.reward-bg {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 40px 112px 48px;
+    background: #FAFAFA;
+}
+
+.reward-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    @include mediaMd {
+        display: block;
+    }
+}
+
 .rewards {
     display: flex;
     flex-direction: row;
     align-items: center;
     padding: 1.5rem;
-    width: 37rem;
+    width: 26.1rem;
     height: 9.5rem;
     background: $primary;
     color: $white;
     background: #060520;
+    margin: 0 2rem 0 0;
     border: 1px solid $border-color;
 
     box-shadow: $card-box-shadow;
@@ -241,8 +287,11 @@
 
 
 .modal {
-    max-width: 40rem;
-    margin: 0 auto;
+    position:absolute;
+    top: 50%;
+    left: 50%;
+    margin: auto;
+    translate: -50% -50%;
 
     &-header {
         display: flex;
@@ -252,6 +301,8 @@
 }
 
 // Skills card account setup
+
+
 .skillcard {
     &-header {
         display: flex;
@@ -292,13 +343,32 @@
         }
 
         img {
-            margin: 0.5rem 0
+            margin: 0.5rem 0;
+
+            @include mediaMd {
+                width: 20rem;
+            }
         }
     }
 }
 
 
 //Learn Card
+
+.learn-bg {
+    padding: 40px 112px 48px;
+}
+
+.learn-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+
+    @include mediaMd {
+        display: block;
+    }
+}
 
 .learn {
     display: flex;
@@ -310,6 +380,15 @@
     box-sizing: border-box;
     box-shadow: $card-box-shadow;
     border-radius: $border-radius;
+    margin: 1rem 2.5rem 0 0;
+
+    &:hover {
+        box-shadow: 15px 35px 64px rgba(0, 0, 0, 0.12);
+    }
+
+    @include mediaMd {
+        margin: 1rem 0;
+    }
 
     hr {
         border: 1px solid #404040;
@@ -379,7 +458,21 @@
     border: 0.5px solid rgba(6, 5, 32, 0.2);
     border-radius: $border-radius;
     width: 50rem;
-    margin: auto;
+    margin: 0.75rem auto;
+
+    &:hover {
+        background: #FFFFFF;
+        border: 1px solid rgba(6, 5, 32, 0.2);
+        box-sizing: border-box;
+        /* 2 */
+
+        box-shadow: 0px 8px 32px rgba(6, 5, 32, 0.06);
+        border-radius: 8px;
+    }
+
+    @include mediaMd {
+        width: 100%;
+    }
 
 
     &-header {
@@ -387,7 +480,7 @@
         justify-content: space-between;
         background: $white;
         box-shadow: 0px 1px 0px rgba(6, 5, 32, 0.2);
-        border-radius: 8px 8px 0px 0px;
+        border-radius: 8px;
         padding: 1rem 1.5rem;
 
         h5 {
@@ -395,6 +488,10 @@
             font-size: 16px;
             line-height: 150%;
             color: #060520;
+        }
+
+        &-open {
+            border-radius: 8px 8px 0px 0px;  
         }
     }
 
@@ -406,15 +503,5 @@
             color: #404040;
             padding: 1.5rem;
         }
-    }
-}
-
-
-//test 
-
-.reward-dashboard{
-    display: flex;
-    &> *{
-        margin: 0 1rem   ;
     }
 }
