--- a/src/assets/scss/_config.scss
+++ b/src/assets/scss/_config.scss
@@ -1,10 +1,10 @@
 .container {
     position: relative;
     min-height: 90vh;
-    margin: 1rem 7rem;
+    // margin: 1rem 7rem;
 
     @include mediaMd {
-        margin: 1rem 2rem;
+        // margin: 1rem 2rem;
     }
 }
 
