--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -9,6 +9,7 @@ $warning:#FF8A22;
 $success:#37D5C7;
 $invalid:#F93C35;
 $black:#000000;
+$text-color-light:#060520;
 $border-color:#EDEDED;
 $border-radius-chip:6.25rem;
 $card-box-shadow:15px 2px 45px rgba(0, 0, 0, 0.05)
