--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -4,5 +4,6 @@
 @import './config';
 @import './layouts';
 @import './global';
+@import './reward.page';
 @import './components';
 @import './cards'
