--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -94,157 +94,53 @@
     margin: 5rem 0 0 0;
 }
 
-// skills cards
 
-
-.skills-bg {
-    padding: 40px 112px 48px;
-    background: #FAFAFA;
-}
-
-.skills-wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    @include mediaMd {
-        display: block;
-    }
-}
-
-.skills {
-    cursor: pointer;
-    padding: 1.5rem 1.5rem 1.2rem;
-    width: 17.5rem;
-    height: 17.5rem;
-    margin: 0 2rem 0 0;
-    border: 1px solid $border-color;
-    box-shadow: $card-box-shadow, inset 0px 6px 0px $success;
-    border-radius: 0.25rem 0.25rem 0.75rem 0.75rem;
-
-    &:hover {
-        box-shadow: 15px 35px 64px rgba(0, 0, 0, 0.15), inset 0px 6px 0px #CCCCCC;
-    }
+// Modal Component
+.modal {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    margin: auto;
+    overflow: scroll;
+    height: 50%;
+    transform: translate(-50%, -50%);
+    background: $white;
+    box-shadow: 0px -4px 30px rgba(0, 0, 0, 0.15);
+    border-radius: 0px;   
 
     @include mediaMd {
-        margin: 1rem auto;
+        bottom: 0;
+        top: 10%;
+        border-top-left-radius: 8px 8px 0px 0px;
+        border-top-right-radius: 8px 8px 0px 0px
     }
 
-    &-icon {
+    &-body {
+        padding: 0.5rem 2.5rem;
+    }
+
+    &-header {
         display: flex;
         justify-content: space-between;
-        align-items: center;
-    }
 
-
-    &-title {
-        margin: 1.6rem 0 5rem 0;
-
-        h4 {
-            font-weight: 700;
-            font-size: 1.25rem;
-            line-height: 150%;
-            color: #060520;
-
-        }
-    }
-
-    &-bottom-bar {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-}
-
-// reward-dashboard
-
-.reward-bg {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 40px 112px 48px;
-    background: #FAFAFA;
-}
-
-.reward-wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    @include mediaMd {
-        display: block;
-    }
-}
-
-.rewards {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 1.5rem;
-    width: 26.1rem;
-    height: 9.5rem;
-    background: $primary;
-    color: $white;
-    background: #060520;
-    margin: 0 2rem 0 0;
-    border: 1px solid $border-color;
-
-    box-shadow: $card-box-shadow;
-    border-radius: 12px;
-
-    &-default {
-        background: $primary;
-    }
-
-    &-dark {
-        background: #060520;
-    }
-
-    &-light {
-        background: $success;
-    }
-
-
-    &-icon {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 6.5rem;
-        height: 6.5rem;
-        border: 12px solid rgba(248, 248, 248, 0.15);
-        border-radius: 50%;
-    }
-
-    &-text {
-        margin: 0 1.5rem;
-        color: $white;
-
-        span {
-            &:nth-child(1) {
-                font-weight: 700;
-                font-size: 2rem;
-            }
-
-            &:nth-child(2) {
-                font-weight: 400;
-                font-size: 1rem;
-            }
-        }
-
-        p {
-            font-weight: 400;
-            font-size: 1rem;
-            line-height: 1.1rem;
+        &:nth-child(2) {
+            margin-left: 3rem;
         }
     }
 }
-
 
 //chip-card
 
 .chip {
     font-weight: 600;
     font-size: 0.75rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &>* {
+        margin: 0 0.2rem 0 0;
+    }
 
     &-primary {
         padding: 0.5rem;
@@ -263,245 +159,5 @@
         padding: 0.5rem;
         background: #F2F2F2;
         border-radius: $border-radius-chip;
-    }
-}
-
-
-//content title
-.content-title {
-    font-weight: 700;
-    font-size: 1.5rem;
-    line-height: 1.8rem;
-    color: $black;
-    margin: 1.5rem 0;
-    text-transform: capitalize;
-
-    &-center {
-        text-align: center;
-    }
-}
-
-
-
-// Modal Component
-
-
-.modal {
-    position:absolute;
-    top: 50%;
-    left: 50%;
-    margin: auto;
-    translate: -50% -50%;
-
-    &-header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-}
-
-// Skills card account setup
-
-
-.skillcard {
-    &-header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    &-content {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-end;
-
-        div {
-            p {
-                font-weight: 500;
-                font-size: 0.75rem;
-                line-height: 1rem;
-                display: flex;
-                align-items: center;
-                color: #404040;
-                margin: 1.5rem 0;
-            }
-        }
-    }
-
-}
-
-.skillsdescription {
-    div {
-        p {
-            font-weight: 400;
-            font-size: 1rem;
-            line-height: 26px;
-            display: flex;
-            align-items: center;
-            color: #404040;
-            margin: 3rem 0;
-        }
-
-        img {
-            margin: 0.5rem 0;
-
-            @include mediaMd {
-                width: 20rem;
-            }
-        }
-    }
-}
-
-
-//Learn Card
-
-.learn-bg {
-    padding: 40px 112px 48px;
-}
-
-.learn-wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-
-    @include mediaMd {
-        display: block;
-    }
-}
-
-.learn {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 24rem;
-    background: $white;
-    border: 1px solid #EDEDED;
-    box-sizing: border-box;
-    box-shadow: $card-box-shadow;
-    border-radius: $border-radius;
-    margin: 1rem 2.5rem 0 0;
-
-    &:hover {
-        box-shadow: 15px 35px 64px rgba(0, 0, 0, 0.12);
-    }
-
-    @include mediaMd {
-        margin: 1rem 0;
-    }
-
-    hr {
-        border: 1px solid #404040;
-    }
-
-    &-img {
-        img {
-            width: 100%;
-        }
-    }
-
-    p {
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 160%;
-        color: #404040;
-        padding: 0 1.5rem;
-        margin: 0.625rem 0;
-    }
-
-    &-title {
-        padding: 0 1.5rem;
-        line-height: 150%;
-        margin: 0.625rem 0;
-
-        h4 {
-            font-weight: 700;
-            font-size: 1.25rem;
-            color: #060520;
-            margin: 0.625rem 0;
-        }
-
-        &-icons {
-            display: flex;
-            font-weight: 400;
-            font-size: 14px;
-
-            div {
-                display: flex;
-                justify-content: space-between;
-
-                &>* {
-                    margin: 0.4rem
-                }
-            }
-        }
-    }
-
-    &-chip {
-        padding: 0 1.5rem;
-        margin: 0.625rem 0;
-    }
-
-    &-button {
-        padding: 0 1.5rem;
-        display: flex;
-        justify-content: center;
-        margin: 0.625rem 0;
-        width: 100%;
-    }
-}
-
-
-// Faqs
-.faqs {
-    background: $white;
-    border: 0.5px solid rgba(6, 5, 32, 0.2);
-    border-radius: $border-radius;
-    width: 50rem;
-    margin: 0.75rem auto;
-
-    &:hover {
-        background: #FFFFFF;
-        border: 1px solid rgba(6, 5, 32, 0.2);
-        box-sizing: border-box;
-        /* 2 */
-
-        box-shadow: 0px 8px 32px rgba(6, 5, 32, 0.06);
-        border-radius: 8px;
-    }
-
-    @include mediaMd {
-        width: 100%;
-    }
-
-
-    &-header {
-        display: flex;
-        justify-content: space-between;
-        background: $white;
-        box-shadow: 0px 1px 0px rgba(6, 5, 32, 0.2);
-        border-radius: 8px;
-        padding: 1rem 1.5rem;
-
-        h5 {
-            font-weight: 600;
-            font-size: 16px;
-            line-height: 150%;
-            color: #060520;
-        }
-
-        &-open {
-            border-radius: 8px 8px 0px 0px;  
-        }
-    }
-
-    &-content {
-        p {
-            font-weight: 400;
-            font-size: 14px;
-            line-height: 160%;
-            color: #404040;
-            padding: 1.5rem;
-        }
     }
 }
