--- a/src/assets/scss/_layouts.scss
+++ b/src/assets/scss/_layouts.scss
@@ -1,5 +1,9 @@
 .header-wrapper {
- background-color: $white
+    background-color: $white;
+
+    @include mediaMd {
+        display: none;
+    }
 }
 
 header {
@@ -56,52 +60,12 @@ header {
 }
 
 
-// Reward NavBar
-
-.rewardNavBar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.4rem 12rem;
-    width: 1440px;
-    height: 36px;
-
-    background: #FFFFFF;
-    box-shadow: 0px -1px 0px rgba(0, 0, 0, 0.04), 0px 1px 0px rgba(0, 0, 0, 0.05);
-
-    &-item {
-        ul {
-            font-weight: 600;
-            font-size: 14px;
-            line-height: 18px;
-            /* identical to box height */
-
-            text-align: center;
-
-            /* Dark/100 */
-
-            color: #060520;
-
-            a {
-                margin: 0.3rem 2.5rem
-            }
-
-            a:hover {
-                border-bottom: 3px solid $primary;
-                padding: 0.7rem 0;
-            }
-        }
-    }
-
-}
-
-
 
 footer {
     font-size: 0.875rem;
     // position: absolute;
     // bottom: 0;
-    width: 100%;
+    // width: 100%;
     margin: auto;
     height: 6.5rem;
 
@@ -128,13 +92,20 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 0 1.5rem ;
 
     @include mediaXl {
         display: flex;
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
+
+        padding: 2.5rem 7rem 3rem;
+        background: #FAFAFA;
+        width: 100%;
     }
+
+
 
 }
 
