--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -97,22 +97,24 @@
 
 // Modal Component
 .modal {
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    margin: auto;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 50%;
+    margin: 2rem auto 0 auto;
     overflow: scroll;
-    height: 50%;
-    transform: translate(-50%, -50%);
-    background: $white;
+    background-color: rgba(0, 0, 0, 0.25);
     box-shadow: 0px -4px 30px rgba(0, 0, 0, 0.15);
-    border-radius: 0px;   
+    padding: 20px;
+    background: $white;
+    cursor: zoom-out;
 
     @include mediaMd {
-        bottom: 0;
-        top: 10%;
-        border-top-left-radius: 8px 8px 0px 0px;
-        border-top-right-radius: 8px 8px 0px 0px
+        width: 100%;
+        border-radius: 20px;
+        padding: 0;
     }
 
     &-body {
