--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,6 +1,7 @@
 $text-color:rgb(6, 5, 32);
 $primary:#5761D7;
 $white:#ffff;
+$black:#000;
 $max-width: 1280px;
 $box-shadow: 0px 8px 32px rgba(6, 5, 32, 0.06);
 $border-radius: 8px;
