--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,11 +1,11 @@
-$text-color:rgb(6, 5, 32);
-$primary:#5761D7;
-$white:#ffff;
-$black:#000;
+$text-color: rgb(6, 5, 32);
+$primary: #5761d7;
+$white: #ffff;
+$black: #000;
 $max-width: 1280px;
 $box-shadow: 0px 8px 32px rgba(6, 5, 32, 0.06);
 $border-radius: 8px;
 $border: 1px solid rgba(6, 5, 32, 0.2);
-$warning:#FF8A22;
-$success:#37D5C7;
-$invalid:#F93C35;
+$warning: #ff8a22;
+$success: #37d5c7;
+$invalid: #f93c35;
