--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,10 +1,10 @@
-@import './variables';
-@import './fonts';
-@import './mixins';
-@import './config';
-@import './layouts';
-@import './global';
-@import './components';
-@import './home';
-@import './profiles';
-@import './cards'
+@import "./variables";
+@import "./fonts";
+@import "./mixins";
+@import "./config";
+@import "./layouts";
+@import "./global";
+@import "./components";
+@import "./home";
+@import "./profiles";
+@import "./cards";
