Fix: layout and other UI styles fixes

--- a/src/assets/scss/_config.scss
+++ b/src/assets/scss/_config.scss
@@ -1,97 +1,89 @@
-.container {
-    position: relative;
-    min-height: 90vh;
-    margin: 1rem 2rem;
-
-    @include mediaMd {
-        margin: 1rem 0rem;
-    }
+body {
+  font-family: "Sora";
 }
 
-.content-wrap {
-    padding-bottom: 2.5rem;
+.container {
+
+  @include mediaMd {
+    margin: 1rem 0rem;
+  }
 }
 
 
 .text-danger {
-    color: rgb(199, 31, 31);
+  color: rgb(199, 31, 31);
 }
 
-
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 // Margin & Padding
 $spaceamounts: (1, 2, 3, 4, 5);
 
 @each $space in $spaceamounts {
+  // All around margin
+  .m-#{$space} {
+    margin: #{$space}rem;
+  }
 
-    // All around margin
-    .m-#{$space} {
-        margin: #{$space}rem;
-    }
+  // Vertical Margin
+  .my-#{$space} {
+    margin: #{$space}rem 0;
+  }
 
-    // Vertical Margin
-    .my-#{$space} {
-        margin: #{$space}rem 0;
-    }
+  .mr-#{$space} {
+    margin-right: #{$space}rem 0;
+  }
 
-    .mr-#{$space} {
-        margin-right: #{$space}rem 0;
-    }
+  .mx-#{$space} {
+    margin: 0 #{$space}rem;
+  }
 
-    .mx-#{$space} {
-        margin:0 #{$space}rem;
-    }
+  .ml-#{$space} {
+    margin-left: #{$space}rem;
+  }
 
-    .ml-#{$space} {
-        margin-left: #{$space}rem;
-    }
+  .mt-#{$space} {
+    margin-top: #{$space}rem;
+  }
 
+  .mb-#{$space} {
+    margin-bottom: #{$space}rem;
+  }
 
-    .mt-#{$space} {
-        margin-top: #{$space}rem;
-    }
+  // All around Padding
+  .p-#{$space} {
+    padding: #{$space}rem;
+  }
 
-    .mb-#{$space} {
-        margin-bottom: #{$space}rem;
-    }
+  .pt-#{$space} {
+    padding-top: #{$space}rem;
+  }
 
-    // All around Padding
-    .p-#{$space} {
-        padding: #{$space}rem;
-    }
+  .pb-#{$space} {
+    padding-bottom: #{$space}rem;
+  }
 
-    .pt-#{$space} {
-        padding-top: #{$space}rem;
-    }
+  .px-#{$space} {
+    padding: 0 #{$space}rem;
+  }
 
-    .pb-#{$space} {
-        padding-bottom: #{$space}rem;
-    }
+  .pr-#{$space} {
+    padding-right: #{$space}rem;
+  }
 
-    .px-#{$space} {
-        padding: 0 #{$space}rem;
-    }
+  .pl-#{$space} {
+    padding-left: #{$space}rem;
+  }
 
-
-    .pr-#{$space} {
-        padding-right: #{$space}rem;
-    }
-
-    .pl-#{$space} {
-        padding-left: #{$space}rem;
-    }
-
-    // Vertical Padding
-    .py-#{$space} {
-        padding: #{$space}rem 0;
-    }
+  // Vertical Padding
+  .py-#{$space} {
+    padding: #{$space}rem 0;
+  }
 }
 
-
 .m-auto {
-    margin: auto;
+  margin: auto;
 }
