--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -18,6 +18,11 @@
     }
   }
 
+  h2 {
+    font-size: 1.9rem;
+    margin-bottom: 25px;
+  }
+
   p {
     font-size: 0.9rem;
     line-height: 150%;
@@ -45,4 +50,8 @@
     line-height: 30px;
     color: #000000;
   }
+}
+
+#growthwrapper {
+  height: 700px;
 }
