--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -52,6 +52,22 @@
   }
 }
 
-#growthwrapper {
-  height: 850px;
+#networkstats {
+  h2 {
+    padding-bottom: 10px;
+  }
+}
+
+.flex-grid-thirds {
+  display: flex;
+  justify-content: space-between;
+}
+.flex-grid-thirds .col {
+  flex: 1;
+  width: 30%;
+}
+
+.chartwrapper {
+  height: 500px;
+  padding: 10px;
 }
