--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -21,6 +21,7 @@
   h2 {
     font-size: 1.9rem;
     margin-bottom: 25px;
+    margin-top: 25px;
   }
 
   p {
@@ -70,4 +71,22 @@
 .chartwrapper {
   height: 500px;
   padding: 10px;
+}
+
+.recent-dids {
+  width: 60ch;
+}
+
+.recent-dids > div:nth-of-type(odd)  {
+  background: #e0e0e0;
+}
+
+.recent-did-item {
+  padding: 5px 3px 3px 2ch;
+}
+
+.recent-did-item:hover {
+  background: rgb(67,228,224) !important;
+  color: white;
+  cursor:pointer;
 }
